--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_HOST=bookeep-onon
-REACT_APP_­API_HOST=https://www.aladin.co.kr/ttb/wblog_manage.aspx
+REACT_APP_­API_HOST=http://www.aladin.co.kr/ttb/api/ItemList.aspx
 REACT_APP_API_KEY=ttbwldls03091429001
+REACT_APP_IMAGE_PREFIX=https://image.tmdb.org/t/p/w300
